<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.addnotes.NoteActivity">
    <item
        android:id="@+id/action_Previous"
        android:icon="@drawable/ic_baseline_navigate_before_24"
        android:orderInCategory="100"
        android:title="@string/previous"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_Next"
        android:icon="@drawable/ic_baseline_navigate_next_24"
        android:orderInCategory="101"
        android:title="@string/next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText" />
</menu>